# libicp-net

./: CMakeLists.txt  README.TXT
matlab/: icpMex.cpp  make.m  sparsifyMex.cpp
src/: demo.cpp  icp.cpp  icp.h  icp_net.cpp  icp_net.h  matrix.h
src/ICPNet/: ICPTest.csproj  Program.cs
src/ICPNet/Properties/: AssemblyInfo.cs
